<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="app_bar">Currency Converter</string>
    <string name="main_total_balances_title">My balances</string>
    <string name="main_currency_exchange_title">Currency Exchange</string>
    <string name="main_currency_exchange_sell_title">Sell</string>
    <string name="main_currency_exchange_receive_title">Receive</string>
    <string name="main_currency_exchange_submit_button">Submit</string>
    <string name="currency_exchange_success_title">Currency converted</string>
    <string name="currency_exchange_success_description">You have converted %1$s to %2$s. Commission Fee: %3$s</string>
    <string name="currency_exchange_success_button">Done</string>
</resources>