<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_bar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/balances_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/main_total_balances_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorPrimary" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/balances_pager"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <TextView
                android:id="@+id/currency_exchange_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/main_currency_exchange_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?attr/colorPrimary"
                app:drawableTint="?attr/colorError" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/main_currency_exchange_sell_title"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:drawableStartCompat="@drawable/ic_arrow_circle_up"
                    app:drawableTint="?attr/colorPrimary" />

                <EditText
                    android:id="@+id/sell_input_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:paddingVertical="4dp" />

                <Spinner
                    android:id="@+id/sell_currencies_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="?attr/colorSurfaceContainer" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/main_currency_exchange_receive_title"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:drawableStartCompat="@drawable/ic_arrow_circle_down"
                    app:drawableTint="?attr/colorPrimary" />

                <EditText
                    android:id="@+id/receive_input_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:paddingVertical="4dp" />

                <Spinner
                    android:id="@+id/receive_currencies_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="?attr/colorSurfaceContainer" />


            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/main_currency_exchange_submit_button" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>